[package]
name = "habitat_api_client"
version = "0.0.0"
authors = ["Josh Black <jblack@chef.io>"]
build = "../bldr-build.rs"
workspace = "../../"

[dependencies]
clippy = {version = "*", optional = true}
hyper = "*"
hyper-openssl = ""
log = "*"

[dependencies.habitat_http_client]
path = "../http-client"

[features]
default = []
functional = []
